--- a/static/index.html
+++ b/static/index.html
@@ -101,8 +101,8 @@
     <div class="layuimini-site-mobile"><i class="layui-icon"></i></div>
 
     <div class="layui-body">
-        <div class="layuimini-content-page">
-        </div>
+        <div class="layuimini-content-page"></div>
+		<div style="text-align: center; height:60px; line-height:60px; color: #9c9da0">v0.9.1-beta</div>
     </div>
 
 </div>
