--- a/static/index.html
+++ b/static/index.html
@@ -102,7 +102,7 @@
 
     <div class="layui-body">
         <div class="layuimini-content-page"></div>
-		<div style="text-align: center; height:60px; line-height:60px; color: #9c9da0">v0.10.1-beta</div>
+		<div style="text-align: center; height:60px; line-height:60px; color: #9c9da0">v0.11.0</div>
     </div>
 
 </div>
