自定义菜单

--- a/static/index.html
+++ b/static/index.html
@@ -134,7 +134,7 @@
 					initMenu = "api/init_admin.json";
 				}
 				var options = {
-					iniUrl: initMenu, // 初始化接口
+					iniUrl: '/globalConfig/menu', // 初始化接口
 					renderPageVersion: false,    // 初始化页面是否加版本号
 					bgColorDefault: false,      // 主题默认配置
 					multiModule: false,         // 是否开启多模块
