去掉配色方案

--- a/static/index.html
+++ b/static/index.html
@@ -84,7 +84,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item layuimini-select-bgcolor" lay-unselect>
-                    <a href="javascript:;" data-bgcolor="配色方案"><i class="fa fa-ellipsis-v"></i></a>
+                    <a href="javascript:;"></a>
                 </li>
             </ul>
         </div>
