--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>DHorse-简单易用的DevOps开发平台</title>
+    <title>DHorse-一个简单易用的云应用管理平台</title>
     <meta name="keywords" content="Dhorse">
     <meta name="description" content="简单易用的DevOps开发平台">
     <meta name="renderer" content="webkit">
